[package]
name = "system76-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apt-parser = "1.0.6"
reqwest = { version = "0.11.20", features = ["rustls-tls-webpki-roots", "brotli", "gzip"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.6"
